# monopy

./: .gitignore  docker-compose.yml
common/logging/: apps.py  middleware.py  models.py  tests.py
projects/IAM/: Dockerfile  pyproject.toml
projects/IAM/IAM/: asgi.py  settings.py  urls.py  wsgi.py
projects/pokemon/pokemon/: asgi.py  settings.py  urls.py  wsgi.py
