[tool.poetry]
name = "@monopy/iam"
version = "0.1.0"
description = ""
authors = ["Kaio Brito <kaio.brito92@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
uvicorn = "^0.17.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
